New instructor slides, project info, and updates for Spring 2026

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "FD3M - Fall 2025"
+  title: "FD3M - Spring 2026"
   navbar:
     background: primary
     search: true
